Updated solid struc rn

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
+  {% block styles %}{% endblock %}
 </head>
 <body class="flex flex-col min-h-screen text-gray-800 font-sans {% block body_bg %}{% endblock %}">
 
