Changed a home comment hm

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}DogArmor | Smart Gear Recommender{% endblock %}
 
 {% block styles %}
-/<!-- This is to make the Frequently Asked Questions text dance (not implenting now) */ -->
+/<!-- This is to make the Frequently Asked Questions text dance */ -->
 <style>
   #faq-heading {
     display: inline-block;
