Left aligned FAQ ans

--- a/templates/index.html
+++ b/templates/index.html
@@ -264,7 +264,7 @@
       Frequently Asked Questions
     </h2>
 
-    <div class="space-y-6">
+    <div class="space-y-6 text-left">
       <!-- FAQ Item -->
       <div x-data="{ open: false }" class="border-b pb-4">
         <button @click="open = !open" class="flex justify-between items-center w-full text-left text-lg font-semibold text-gray-800">
