changed something in demo

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -20,7 +20,7 @@
         </legend>
 
         {% for field, label, options in [
-          ('weight', 'Weight', ['Strawweight: <10lbs', 'Middleweight <40lbs', 'Heavyweight >40lbs']),
+          ('weight', 'Weight [Estimated from photo unless provided by user input]', ['Strawweight: <10lbs', 'Middleweight <40lbs', 'Heavyweight >40lbs']),
           ('chest_bridge_length', 'Length of Chest Bridge', ['Small: <9"', 'Medium: <28"', 'Large: >28"']),
           ('neck_circumference', 'Neck Circumference', ['Small: <10"', 'Medium: <18"', 'Large: >18"']),
           ('back_bridge_length', 'Length of Back Bridge', ['Small: <6"', 'Medium: <8.6"', 'Large: >8.6"']),
