--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,8 @@
   <div class="flex flex-col md:flex-row gap-12">
     <!-- Big Main Header top-left -->
     <div class="md:w-1/3 -mt-[70px]">
-      <h2 class="text-5xl font-extrabold text-[var(--primary)] leading-tight">
+      <h2 class="text-5xl font-extrabold text-[var(--primary)] leading-tight" data-aos="fade-right" data-aos-duration="1000"
+      data-aos-easing="ease-out-cubic">
         The perfect gear. All by filling out a quick form.
       </h2>
     </div>
