--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
   <!-- Image Below -->
   <div class="mt-20 flex justify-center" data-aos="zoom-in-up">
     <img src="{{ url_for('static', filename='dog-gear1.png') }}" alt="Dog wearing gear"
-         class="w-4/5 md:w-3/4 lg:w-2/3 h-auto rounded-2xl shadow-2xl">
+         class="w-4/5 md:w-3/4 lg:w-2/3 h-auto max-h-[900px] max-w-[750px] rounded-2xl shadow-2xl">
   </div>
 </section>
 
