test commit checking ci/cd

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
     <div class="md:w-1/2" data-aos="fade-right">
       <h1 class="text-4xl md:text-5xl font-extrabold text-[var(--primary)] leading-tight"
       data-aos="fade-right" data-aos-delay="100" data-aos-duration="1200" data-aos-easing="ease-in-out">
-        Find the Perfect Collar, Harness, and Leash
+        Find the Perfect Collar, Harness, and Leash TESTING TESTING
       </h1>
     </div>
 
