changed anto quote

--- a/templates/team.html
+++ b/templates/team.html
@@ -48,7 +48,7 @@
           <p class="text-gray-700 max-w-md">
             Anto works on creating the best models and writing the backend for user experience, ensuring the app provides a delightful experience for others.
           </p>
-          <p class="italic text-rose-400 mt-4 max-w-sm">“I want to create unique and convenient products. Stuff that'll make every day just a little easier.”</p>
+          <p class="italic text-rose-400 mt-4 max-w-sm">“Creating cool products is both useful for other and fun for me, so why not do it?”</p>
           <div class="mt-6 flex space-x-6 justify-center text-gray-500">
             <a aria-label="Email Anto" class="hover:text-rose-500 transition" href="https://mail.google.com/mail/?view=cm&to=antojason25@gmail.com" target="_blank" rel="noopener">
               <i class="w-6 h-6" data-lucide="mail"></i>
